assets/less/style.less
h1 {
	font-size: 24px;
	font-weight: bold;
}

h1, h2, h3, h4, h5, h6, strong {
	margin: 0 0 10px 0;
	.emphasis,
	&.emphasis {
		color: @matrix42_orange;
	}
	.secondary,
	&.secondary {
		color: @breadcrumb_color;
	}
}

p {
	margin: 0 0 20px 0;
}

.border {
	.border;
}

ul.list {
	margin: 20px;
	list-style: none;
	li {
		margin-bottom: 20px;
		background: @bullet_bg;
		padding-left: 30px;
		ul {
			li {
				background: none;
			}
		}
	}
}

.completed {
	background-color: #eba5a4 !important;
}

.upcoming {
	background-color: #a7eba4 !important;
}

.mitsume {
	.left;
	width: @site_width / 3 - @padding;
	padding-left: @padding;
}

.hanbun {
	.left;
	width: @site_width / 2 - @padding;
	padding-left: @padding;
}

.well {
	h2 {
		line-height: 22px;
	}
}

.no-margin {
	margin: 0;
}

.dashed-left {
	background: transparent url(@{img_path}dashed.png) repeat-y top left;
}

.dashed-right {
	background: transparent url(@{img_path}dashed.png) repeat-y top right;
}

.quote {
	background: transparent url(@{img_path}quotes.png) no-repeat 0 0;
	.italics {
	    .block;
		margin: 10px @margin;
	}
}

#main-container {
	.shadowbox(0.5, 60px);
	background-color: #ffffff;
}

#main-nav {
	background-color: @nav_color;
	#logo,
	#twitname {
		height: @nav_height - 25;
		padding: 12px 20px 5px 20px;
		.block;
		color: #aaaaaa;
		font-weight: bold;
		font-size: 10px;
	}
	#nav {
		li.dropdown:hover ul.dropdown-menu {
			.block;
		}
		a.menu:after, .dropdown-toggle:after {
			content: none;
		}
		li {
			a {
				.block;
				padding-top: 11px;
				height: @nav_height - 25;
			}
		}
		li.active {
			a {
				background: transparent url(@{img_path}nav-active.png) no-repeat bottom center;
			}
		}
		.dropdown-menu {
			margin-top: -5px;
			li {
				a {
					.block;
					background: transparent url(@{img_path}bullet.png) no-repeat left center;
					padding: 3px 10px 2px 20px;
					height: 15px;
				}
				a:hover {
					color: @matrix42_orange;
				}
				&.subheader {
					.bold;
					.border-bottom;
					font-size: 15px;
					color: @nav_color;
					padding: 1px 10px 1px 5px;
				}
				&.minor {
					font-size: 12px;
					a {
						padding: 1px 10px 1px 15px;
					}
				}
			}
		}
	}
}

#breadcrumb {
	height: 26px;
	padding-top: 6px;
	background-color: #608da0;
	.breadcrumb-level {
		.padded;
		a {
			color: #fff;
		}
		h4 {
			.left;
		}
	}
}

.carrot {
	font-family: Arial helveticaneue-light helvetica;
	margin: 0 5px;
}

#banner {
	.rel;
	.bg,
	bg2 {
		display: inline-block;
	}
	.bg {
		z-index: 1;
	}
	.tag-content {
		.abs;
		z-index: 2;
		h1, h2, h3, h4 {
			margin: 0;
		}
		h1, h4 {
			font-family: 'Helvetica Neue', 'Helvetica', 'Arial';
			font-weight: bold;
		}
	}
}

#titlebar {
	height: 50px;
	margin-top: 0;
	background-color: #eeeeee;
	h1 {
	    padding-top: 5px;
		.padded;
	}
}

.tab-content {
	.rounded_bottom();
	.rounded_top_right();
	padding: 10px 0;
	border: transparent 1px solid;
	background-color: #ffffff;
	border: 1px solid #dddddd;
}

.rounded-top-left {
	.rounded_top_left();
}

ul.listed {
	.border;
	.rounded_corners();
	list-style: none;
	margin: 0 10px;
	li {
		.border-top;
		.rounded_corners();
		margin-top: -1px;
		padding: 10px;
		.thumbnail {
			margin: 0 5px 5px 0;
		}
		h4,
		h5 {
			margin-bottom: 0;
		}
		p {
			font-size: 12px;
		}
	}
}

#footer {
	color: #aaaaaa;
	a {
		color: #aaaaaa;
	}
	a:hover {
		color: #666666;
	}
	#footer-top {
		margin-top: 15px;
		#social-links {
			.right;
			list-style: none;
			li {
				.left;
				margin-left: 10px;
				a {
					.block;
					width: 31px;
					height: 31px;
					overflow: hidden;
					text-indent: -1000px;
					background-color: transparent;
					background-repeat: no-repeat;
					background-position: center center;
					&#blog {
						background-image: url(@{img_path}icons/blog-quiet.png);
					}
					&#blog:hover {
						background-image: url(@{img_path}icons/blog-loud.png);
					}
					&#facebook {
						background-image: url(@{img_path}icons/facebook-quiet.png);
					}
					&#facebook:hover {
						background-image: url(@{img_path}icons/facebook-loud.png);
					}
					&#twitter {
						background-image: url(@{img_path}icons/twitter-quiet.png);
					}
					&#twitter:hover {
						background: url(@{img_path}icons/twitter-loud.png);
					}
					&#linkedin {
						background-image: url(@{img_path}icons/linkedin-quiet.png);
					}
					&#linkedin:hover {
						background: url(@{img_path}icons/linkedin-loud.png);
					}
				}
			}
		}
	}
	#footer-links {
		ul {
			list-style: none;
		}
	}
}

ul.link-list {
	margin: 10px 0;
	li {
		padding: 0;
		margin: 0 0 2px 0;
	}
}

.well-container {
	.rounded_corners();
	padding: 20px 0;
	background-color: @content_bg_color;
}

#lead-form {
	.full-border-right;
	.border-top;
	.border-bottom;
	background-color: #f7f7f7;
	.contact-well {
		margin: 0;
		.full-border-right;
		background-color: @titlebar_bg_color;
		min-height: 250px;
		font-size: 12px;
	}
	.contact-form {
		margin: 0;
		padding: 0 20px 20px 0;
	}
}

.squeezed-title {
	h1, h3 {
		line-height: 18px;
		margin-bottom: 0;
	}
}

#boldchat {
	span {
		display: none;
	}
}

.btn-icon.btn-mini {
	line-height: 24px;
	display: table-cell;
	vertical-align: middle;
}

/*responsive*/
@media (max-width: 480px) {
/* Need to adjust the size of the headers in banners */
	.carousel-control {
		top: 50%;
		width: 20px;
		height: 20px;
		font-size: 30px;
		line-height: 17px;
	}
	.dashed-right,
	.dashed-left {
		background: none;
	}
	#footer-links {
		.hidden;
	}
	#our-customers,
	#making-waves {
		img {
			max-width: 50px;
		}
	}
	#titlebar {
		h1 {
			font-size: 14px;
		}
	}
	#banner {
		h1 {
			font-size: 16px;
			line-height: 14px;
			letter-spacing: -2px;
		}
		h2 {
			font-size: 11px;
			line-height: 10px;
			text-transform: uppercase;
			letter-spacing: -1px;
		}
		h3 {
			.left;
			font-size: 8px;
			line-height: 7px;
			letter-spacing: -1px;
		}
		h4 {
			font-size: 6px;
			line-height: 5px;
			text-transform: uppercase;
			letter-spacing: -1px;
		}
	}
}
@media (min-width: 481px) {
	.carousel-control {
		top: 40%;
		width: 40px;
		height: 40px;
		font-size: 60px;
		line-height: 30px;
	}
}
@media (min-width: 481px) and (max-width: 767px) {
	#banner {
		h1 {
			font-size: 20px;
			line-height: 18px;
			letter-spacing: -1px;
		}
		h2 {
			font-size: 16px;
			line-height: 15px;
			text-transform: uppercase;
			letter-spacing: -1px;
		}
		h3 {
			.left;
			font-size: 14px;
			line-height: 13px;
			letter-spacing: -1px;
		}
		h4 {
			font-size: 11px;
			line-height: 10px;
			text-transform: uppercase;
			letter-spacing: -1px;
		}
	}
}
@media (min-width: 768px) and (max-width: 979px) {
	#banner {
		h1 {
			font-size: 50px;
			line-height: 48px;
			letter-spacing: -4px;
		}
		h2 {
			font-size: 24px;
			text-transform: uppercase;
			letter-spacing: -1px;
		}
		h3 {
			.left;
			font-size: 18px;
			letter-spacing: -1px;
		}
		h4 {
			font-size: 16px;
			text-transform: uppercase;
			letter-spacing: -1px;
		}
	}
}
@media (max-width: 980px) {
	.container {
		overflow: hidden;
	}
}
@media (min-width: 980px) {
	#banner {
		h1 {
			font-size: 64px;
			line-height: 69px;
			letter-spacing: -5px;
		}
		h2 {
			font-size: 24px;
			text-transform: uppercase;
			letter-spacing: -1px;
		}
		h3 {
			.left;
			font-size: 18px;
			letter-spacing: -1px;
		}
		h4 {
			font-size: 16px;
			text-transform: uppercase;
			letter-spacing: -1px;
		}
	}
}
@media (min-width: 1200px) {
	#nav {
		.right;
	}
}

